@@ -59,6 +59,7 @@ prskw	kw_pmkfile[] = {
 /*		XXX new format */
 		{"DEFINE",		PMK_TOK_DEFINE, PRS_KW_NODE, PMK_TOK_SETVAR},
 		{"SETTINGS",		PMK_TOK_SETNGS, PRS_KW_NODE, PMK_TOK_SETPRM},
+		{"IF",			PMK_TOK_IFCOND,	PRS_KW_NODE, PRS_TOK_NULL},
 		{"SWITCHES",		PMK_TOK_SWITCH, PRS_KW_CELL, PRS_TOK_NULL}, /* XXX will be node */
 		{"CHECK_BINARY",	PMK_TOK_CHKBIN, PRS_KW_CELL, PRS_TOK_NULL},
 		{"CHECK_HEADER",	PMK_TOK_CHKINC, PRS_KW_CELL, PRS_TOK_NULL},
@@ -95,6 +96,9 @@ bool func_wrapper(prscell *pcell, pmkdata *pgd) {
 			break;
 		case PMK_TOK_SETNGS :
 			rval = pmk_settings(&cmd, pcell->data, pgd);
+			break;
+		case PMK_TOK_IFCOND :
+			rval = pmk_ifcond(&cmd, pcell->data, pgd);
 			break;
 		case PMK_TOK_SETVAR :
 			rval = pmk_set_variable(&cmd, pcell->data, pgd);
@@ -234,6 +238,22 @@ bool pmk_settings(pmkcmd *cmd, prsnode *pnode, pmkdata *gdata) {
 	pmk_log("\n* Parsing settings\n");
 
 	return(process_node(pnode, gdata));
+}
+
+/*
+	if condition
+*/
+
+bool pmk_ifcond(pmkcmd *cmd, prsnode *pnode, pmkdata *gdata) {
+	if (label_check(gdata->labl, cmd->label) == true) {
+		pmk_log("\n< Begin of condition [%s]\n", cmd->label);
+		process_node(pnode, gdata);
+		pmk_log("\n> End of condition [%s]\n", cmd->label);
+	} else {
+		pmk_log("\n- Skipping condition [%s]\n", cmd->label);
+	}
+
+	return(true);
 }
 
 /*
