@@ -4,6 +4,8 @@
 #include "../hash.c"
 #include "../pmk_obj.c"
 #include "../func.c"
+#include "../autoconf.c"
+#include "../pathtools.c"
 #include "../functool.c"
 
 #define DEBUG_PRS	1
