@@ -1,3 +1,11 @@
+25 Sep 2003 mipsator
+ * added prs_get_line(), parse_node(), parse_command() and parse_line() to
+	allow use of real nodes (aka commands into another command).
+ * rewritten parse_pmkfile() to use new functions.
+ * updated test/parser_test.c to sync with latest changes.
+ * added pmk_ifcond() into func.c to manage new 'IF' keyword.
+ * updated pmkfile sample to use 'IF' keyword.
+
 22 Sep 2003 mipsator
  * added small support for DEFS.
 
